bugFix pom.xml