@@ -7,11 +7,105 @@
     <groupId>fr.ul.miage</groupId>
     <artifactId>Projet_Structuration</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>Projet_Structuration</name>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
+<properties>
+<project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
+<project.bindist.dir>${project.basedir}/bindist</project.bindist.dir>
+<project.main.classname>${project.groupId}.${project.artifactId}.App</project.main.classname>
+<project.bin.appname>run</project.bin.appname>
+</properties>
+<build>
+<plugins>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.8.0</version>
+<configuration>
+<release>11</release>
+</configuration>
+</plugin>
+<!--   -->
+<plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>appassembler-maven-plugin</artifactId>
+<version>1.10</version>
+<executions>
+<execution>
+<id>unix</id>
+<phase>package</phase>
+<goals>
+<goal>assemble</goal>
+</goals>
+<configuration>
+<assembleDirectory>${project.bindist.dir}</assembleDirectory>
+<repositoryLayout>flat</repositoryLayout>
+<extraJvmArguments> --module-path $JAVAFX_HOME/lib --add-modules javafx.controls,javafx.fxml </extraJvmArguments>
+<programs>
+<program>
+<platforms>
+<platform>unix</platform>
+</platforms>
+<mainClass>${project.main.classname}</mainClass>
+<id>${project.bin.appname}</id>
+</program>
+</programs>
+</configuration>
+</execution>
+<execution>
+<id>win</id>
+<phase>package</phase>
+<goals>
+<goal>assemble</goal>
+</goals>
+<configuration>
+<assembleDirectory>${project.bindist.dir}</assembleDirectory>
+<repositoryLayout>flat</repositoryLayout>
+<extraJvmArguments> --module-path %JAVAFX_HOME%/lib --add-modules javafx.controls,javafx.fxml </extraJvmArguments>
+<programs>
+<program>
+<platforms>
+<platform>windows</platform>
+</platforms>
+<mainClass>${project.main.classname}</mainClass>
+<id>${project.bin.appname}</id>
+</program>
+</programs>
+</configuration>
+</execution>
+</executions>
+</plugin>
+<!--   -->
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-assembly-plugin</artifactId>
+<version>3.1.0</version>
+<executions>
+<execution>
+<id>make-zip</id>
+<phase>install</phase>
+<goals>
+<goal>single</goal>
+</goals>
+<configuration>
+<descriptors>
+<descriptor>zip.xml</descriptor>
+</descriptors>
+<appendAssemblyId>true</appendAssemblyId>
+</configuration>
+</execution>
+</executions>
+</plugin>
+<plugin>
+<groupId>org.openjfx</groupId>
+<artifactId>javafx-maven-plugin</artifactId>
+<version>0.0.5</version>
+<configuration>
+<mainClass>${project.main.classname}</mainClass>
+</configuration>
+</plugin>
+</plugins>
+</build>
     <dependencies>
     <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
     <dependency>
@@ -39,7 +133,7 @@
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
-        <version>11</version>
+        <version>17.0.0.1</version>
     </dependency>
     <dependency>
         <groupId>org.openjfx</groupId>
@@ -56,5 +150,10 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.11</version>
     </dependency>
+    <dependency>
+  <groupId>org.json</groupId>
+  <artifactId>json</artifactId>
+  <version>20090211</version>
+</dependency>
 </dependencies>
 </project>
